Melhorias e final etiqueta

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,5 +20,6 @@
 			"label": "sigamdi"
 		}
 	],
-	"lastProgramExecuted": "sigamdi"
+	"lastProgramExecuted": "sigamdi",
+	"lastProgramArguments": []
 }
